--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,39 +1,85 @@
-@define-color foreground #eeeeee;
-@define-color foreground-inactive #aaaaaa;
-@define-color background #000000;
-
 * {
-    font-family: JetBrainsMono Nerd Font;
-    font-size: 17px;
-    padding: 0;
-    margin: 0;
+  font-family: Iosevka Nerd Font;
+  font-size: 16px;
+  min-height: 0;
+  padding-right: 2px;
+  padding-left: 2px;
+  padding-bottom: 0px;
 }
 
 #waybar {
-    color: @foreground;
-    background-color: @background;
+  background: transparent;
+  color: #c6d0f5;
+  margin: 2px 2px;
+}
+
+#workspaces {
+  border-radius: 5px;
+  margin: 5px;
+  background: #101010;
+  margin-left: 2px;
 }
 
 #workspaces button {
-    color: @foreground;
-    padding-left: 0.7em;
+  color: #babbf1;
+  border-radius: 5px;
+  padding: 0.4rem;
 }
 
-#workspaces button.empty {
-    color: @foreground-inactive;
+#workspaces button.active {
+  color: #99d1db;
+  border-radius: 5px;
 }
 
-#memory,
-#temperature {
-    padding-left: 1em
+button {
+  background: transparent;
 }
 
-#wireplumber,
-#battery,
+#workspaces button:hover {
+  background: #1e1e1e;
+  border: 0px solid transparent;
+}
+
+#tray,
 #backlight,
-#language,
+#clock,
+#battery,
+#pulseaudio,
 #network,
-#bluetooth,
-#tray {
-    padding-right: 1em 
+#cpu,
+#memory {
+  background-color: #101010;
+  padding: 0.5rem 1rem;
+  margin: 5px 0;
+}
+
+#clock {
+  color: #8caaee;
+  border-radius: 5px;
+}
+
+#battery {
+  color: #a6d189;
+}
+
+#battery.charging {
+  color: #a6d189;
+}
+
+#battery.warning:not(.charging) {
+  color: #e78284;
+}
+
+#backlight {
+  color: #e5c890;
+}
+
+#backlight,
+#battery {
+  border-radius: 0;
+}
+
+#pulseaudio {
+  color: #ea999c;
+  border-radius: 5px 0px 0px 5px;
 }
